I have built the Etch-a-sketch, now I am starting to handle user input.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
     <main>
       <h1>Etch-a-Sketch</h1>
       <div class="device">
-        <div class="controls"></div>
+        <div class="controls">
+          <div class="group-2">
+            <div class="button"></div>
+            <div class="button"></div>
+          </div>
+          <div class="group-2">
+            <div class="button"></div>
+            <div class="button"></div>
+          </div>
+          <div class="group-2">
+            <div class="button"></div>
+            <div class="button"></div>
+          </div>
+          <div class="group-1">
+            <div class="selector">
+              <div id="marker" class="marker"></div>
+              <div class="labels">
+                <h4>16</h4>
+                <h4>32</h4>
+                <h4>64</h4>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="screen" id="screen">
         </div>
       </div>
