I have set four separate grid sizes. Next step will be setting 4 zones on the selector bar that are assigned to the grid sizes.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           </div>
           <div class="group-1">
             <div class="selector">
-              <div id="marker" class="marker"></div>
-              <div class="labels">
-                <h4>16</h4>
-                <h4>32</h4>
-                <h4>64</h4>
-              </div>
+              <div draggable="true" id="marker" class="marker"></div>
             </div>
+          </div>
+          <div class="labels">
+            <h4>-</h4>
+            <h4>Grid</h4>
+            <h4>+</h4>
           </div>
         </div>
         <div class="screen" id="screen">
