I have chosen colors and the grid updates when the user drags the selector bar.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Etch-a-sketch</title>
+    <title>Etch-A-sketch</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <main>
-      <h1>Etch-a-Sketch</h1>
+      <h1>Etch-A-Sketch</h1>
       <div class="device">
         <div class="controls">
           <div class="group-2">
-            <div class="button"></div>
-            <div class="button"></div>
+            <div id="button1" class="button"></div>
+            <div id="button2" class="button"></div>
           </div>
           <div class="group-2">
-            <div class="button"></div>
-            <div class="button"></div>
+            <div id="button3" class="button"></div>
+            <div id="button4" class="button"></div>
           </div>
           <div class="group-2">
-            <div class="button"></div>
-            <div class="button"></div>
+            <div id="button5" class="button"></div>
+            <div id="button6" class="button"></div>
+          </div>
+          <div class="group-2">
+            <div id="button7" class="button"></div>
+            <div id="button8" class="button"></div>
           </div>
           <div class="group-1">
             <div class="selector">
@@ -32,8 +36,8 @@
             <h4>+</h4>
           </div>
         </div>
-        <div class="screen" id="screen">
-        </div>
+        <div class="screen" id="screen"></div>
+        <div class="bookend"></div>
       </div>
     </main>
     <script src="main.js"></script>
