--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <main>
       <h1>Etch-A-Sketch</h1>
       <div class="device">
-        <div class="controls">
+        <div id="controls" class="controls">
           <div class="group-2">
             <div id="button1" class="button"></div>
             <div id="button2" class="button"></div>
