This project is in a good working state.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Etch-A-sketch</title>
+    <link rel="icon" type="image/x-icon" href="images/palette-solid.svg">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
@@ -36,7 +37,8 @@
             <h4>+</h4>
           </div>
         </div>
-        <div class="screen" id="screen"></div>
+        <div class="screen" id="screen">
+        </div>
         <div class="bookend"></div>
       </div>
     </main>
