I added a reset button and I got rid of the annoying alert message.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <main>
       <h1>Etch-A-Sketch</h1>
+      <p>Click and drag to color!</p>
       <div class="device">
         <div id="controls" class="controls">
           <div class="group-2">
@@ -39,7 +40,9 @@
         </div>
         <div class="screen" id="screen">
         </div>
-        <div class="bookend"></div>
+        <div class="bookend">
+          <div id="reset" class="button"></div>
+        </div>
       </div>
     </main>
     <script src="main.js"></script>
