I have added in dots so that the user can see their current selection.

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
       <div class="device">
         <div id="controls" class="controls">
           <div class="group-2">
-            <div id="button1" class="button"></div>
-            <div id="button2" class="button"></div>
+            <div id="button1" class="button"><div id="dot1" class="active default"></div></div>
+            <div id="button2" class="button"><div id="dot2" class="active"></div></div>
           </div>
           <div class="group-2">
-            <div id="button3" class="button"></div>
-            <div id="button4" class="button"></div>
+            <div id="button3" class="button"><div id="dot3" class="active"></div></div>
+            <div id="button4" class="button"><div id="dot4" class="active"></div></div>
           </div>
           <div class="group-2">
-            <div id="button5" class="button"></div>
-            <div id="button6" class="button"></div>
+            <div id="button5" class="button"><div id="dot5" class="active"></div></div>
+            <div id="button6" class="button"><div id="dot6" class="active"></div></div>
           </div>
           <div class="group-2">
-            <div id="button7" class="button"></div>
+            <div id="button7" class="button"><div id="dot7" class="active"></div></div>
             <div id="button8" class="button"></div>
           </div>
           <div class="group-1">
